# drat-tools

./: .gitignore
drat-fc/: .gitignore  LICENSE  README.md  drat-checker.cabal
drat-fc/app/: TwoWatcherStaticLists.hs
drat-fc/data/: manthey_single-ordered-initialized-w18-b7.drup
drat-fc/src/Data/: CNF.hs  PDRAT.hs
drat-fc/src/Data/Parse/: DRAT.hs  DimacsCNF.hs
drat-fz/: CMakeLists.txt  Cnf_Reader.cpp  Cnf_Reader.h  Destroyer.cpp  Destroyer.h  Fuzzer_Caller.cpp  Fuzzer_Caller.h  README.md  Verificator_Caller.cpp  Verificator_Caller.h  config  main.cpp  main.h.in
drat-vc/: README.md  drat-vc.cabal
drat-vc/app/: Main.hs
drat-vc/src/Data/: DRAT.hs
