name:                drat-checker
version:             0.1.0.0
synopsis:            A checker for the drat proof format of SAT solvers.
description:         Please see README.md
homepage:            https://github.com/githubuser/drat-checker#readme
license:             BSD3
license-file:        LICENSE
author:              Tobias Phillip and Walter Forkel
maintainer:          walter.forkel@tu-dresden.de
copyright:           2017 Tobias Phillip and Walter Forkel
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10


library
  hs-source-dirs:      src
  exposed-modules:     Data.CNF
                     , Data.DRAT
                     , Data.PDRAT
                     , Data.Parse.DimacsCNF
                     , Data.Parse.DRAT
  build-depends:       base >= 4.7 && < 5
                     , vector == 0.11.0.0
                     , containers >= 0.5.6.2
                     , bytestring
  default-language:    Haskell2010

executable drat-checker
  hs-source-dirs:      app
  main-is:             TwoWatcherStaticLists.hs
  ghc-options:         -O2
  build-depends:       base >= 4.7 && < 5
                     , vector == 0.11.0.0
                     , containers >= 0.5.6.2
                     , bytestring
                     , primitive
                     , mtl
                     , hashtables
                     , process
                     , transformers
                     , drat-checker
  default-language:    Haskell2010
