name:                drat-vc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/drat-vc#readme
license:             MIT
author:              Tobias Phillip and Walter Forkel
maintainer:          walter@forkel.eu
copyright:           2017 Tobias Phillip
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable drat-vc-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -O2
  build-depends:       base
                     , drat-vc
                     , bytestring
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Data.CNF
                     , Data.DRAT
                     , Data.Parse.DimacsCNF
                     , Data.Parse.DRAT
  build-depends:       base >= 4.7 && < 5
                     , containers >= 0.5.6.2
                     , bytestring
  default-language:    Haskell2010
